# uisu-web-cms

./: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
news/: admin.py  models.py  schema.py  serializers.py  views.py
news/migrations/: 0001_initial.py  0002_auto_20220313_1906.py  0003_auto_20220313_2208.py  0004_auto_20220314_0821.py  0005_auto_20220314_0832.py  0006_auto_20220316_1855.py  0007_auto_20220316_2154.py  0008_auto_20220317_0728.py
uisu_web_cms/: asgi.py  settings.py  urls.py  wsgi.py
