[tool.poetry]
name = "uisu-web-cms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.4"
graphene-django = "2.14.0"
django-cors-headers = "3.6.0"
Pillow = "^9.0.1"
cloudinary = "^1.29.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
