[tool.poetry]
name = "uisu-web-cms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.4"
graphene-django = "2.14.0"
django-cors-headers = "3.6.0"
Pillow = "^9.0.1"
cloudinary = "^1.29.0"
django-environ = "^0.8.1"
django-filter = "^21.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-cloudinary-storage = "^0.3.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
dj-static = "^0.0.6"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
